--- a/iot-analysis/pom.xml
+++ b/iot-analysis/pom.xml
@@ -12,6 +12,8 @@
     <artifactId>iot-analysis</artifactId>
 
     <properties>
+        <main.class>iot.day.Streaming</main.class>
+
         <spark.version>2.2.0</spark.version>
         <scala.maven.plugin.version>3.2.1</scala.maven.plugin.version>
 
@@ -36,11 +38,22 @@
 
         <dependency>
             <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>${spark.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
             <version>${spark.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql-kafka-0-10_2.11</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
 
     </dependencies>
 
@@ -69,7 +82,6 @@
                 </executions>
                 <configuration>
                     <args>
-                        <!-- work-around for https://issues.scala-lang.org/browse/SI-8358 -->
                         <arg>-nobootcp</arg>
                     </args>
                 </configuration>
@@ -110,9 +122,6 @@
                             <!-- Name of the Oshinko cluster-->
                             <OSHINKO_CLUSTER_NAME>iot-cluster</OSHINKO_CLUSTER_NAME>
 
-                            <!-- Reference to the cluster configmap in src/main/fabric8/cluster-cm.yml -->
-                            <!--<OSHINKO_NAMED_CONFIG>myconfig</OSHINKO_NAMED_CONFIG>-->
-
                             <!-- Do not delete the cluster when the pod terminates -->
                             <OSHINKO_DEL_CLUSTER>false</OSHINKO_DEL_CLUSTER>
 
@@ -123,7 +132,7 @@
                             <APP_FILE>${build.finalName}.jar</APP_FILE>
 
                             <!-- Application main class to run -->
-                            <APP_MAIN_CLASS>iot.day.Hello</APP_MAIN_CLASS>
+                            <APP_MAIN_CLASS>${main.class}</APP_MAIN_CLASS>
 
                             <!-- Alternative settings: add packages here and mark them as provided (it will download them from internet) -->
                             <!--<SPARK_OPTIONS>&#45;&#45;packages org.apache.spark:spark-streaming-kafka-0-10_2.11:${spark.version}</SPARK_OPTIONS>-->
@@ -134,6 +143,7 @@
                             <java-exec>
                                 <!-- The radanalytics java-spark image -->
                                 <from>radanalyticsio/radanalytics-java-spark:stable</from>
+                                <mainClass>${main.class}</mainClass>
                             </java-exec>
                         </config>
                     </generator>
